# poetry-dynamic-versioning-example

./: README.md  pyproject.toml
.github/workflows/: create-draft-release.yml
